--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -56,10 +56,10 @@ p {line-height: 1.8;}
 header {width: 100%;height: 100px;background-color: #054568;padding: 15px;}
 header .container .row {position: relative;min-height: 65px;}
 
-.logotipo {max-width: 210px;max-height: 47px;overflow: hidden;margin: 5px 0}
+.logotipo {max-width: 210px;max-height: 47px;overflow: hidden;margin: 5px 0 5px 30px;}
 .logotipo h1 {background: url("../img/logotipo.png") no-repeat;background-size: contain;text-indent: -99999px;width: 210px;height: 39px;margin: 0}
 
-.pages-img {display: inline-block;position:absolute;left:200px;margin: 5px; top: 0;}
+.pages-img {display: inline-block;position:absolute;left:220px;margin: 5px; top: 0;}
 .pages-img a {
     width: 52px;
     height: 52px;
