--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -66,6 +66,8 @@ header .container .row {position: relative;min-height: 65px;}
     display: inline-block;
     vertical-align: top;
 }
+.pages-img img {margin-top: 5px;}
+
 .font {font-size: 320%;color: #fff;}
 .font-active {color: #01aef0!important;border-color: #01aef0!important;}
 .font-active > i.font {color: #01aef0!important;}
@@ -305,6 +307,10 @@ legend {font-size: 24px;padding: 15px 0 20px;font-weight: 500;}
 /*============================== MEDIA QUERIES ===================================*/
 @media (max-width: 1190px) {
     * {-webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;}
+    .logotipo {margin-left: 15px;}
+    .pages-img {left: 200px;}
+    .form, #bd, #signIn {right: 10px;}
+
     .carousel-caption li .slider-h1 {font-size: 25px;max-width: 500px;}
     .title1 {margin: 20px 20px 10px;}
     .col-md-4 .title1 {margin: 20px 0 10px;}
@@ -350,7 +356,7 @@ legend {font-size: 24px;padding: 15px 0 20px;font-weight: 500;}
 }
 @media (max-width: 800px) {
     header {height: 140px;}
-    header .row .pages-img {top: 50px;left: -10px;}
+    header .row .pages-img {top: 50px;left: 10px;}
     header #signIn {top: 81px;}
     .navbar-nav > li > a {font-size: 14px;padding: 15px 5px;}
 
@@ -423,7 +429,7 @@ legend {font-size: 24px;padding: 15px 0 20px;font-weight: 500;}
     .pages-img a {margin: 0;width: 40px;height: 40px;padding: 0;}
     .font {font-size: 240%}
 
-    header .form {width: 100%;display: block;top: 100px;left: 0!important;}
+    header .form {width: 95%;display: block;top: 100px;left: 0!important;margin: 0 10px;}
     head .form {position: relative}
     header .form #search {width: 100%;display: inline-block;}
     header .form #searchButton {position: absolute;right: 0;top: 3px;width: 50px;}
