--- a/assets/sosoares/styles.css
+++ b/assets/sosoares/styles.css
@@ -66,6 +66,8 @@ header .row {position: relative;}
 #bd {display: inline-block;margin: 5px;position: absolute;top: 10px; right: 10px;
     -webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
 }
+#bd img {margin: 0 0 0 15px}
+
 .logotipo {max-width: 210px;max-height: 47px;overflow: hidden;margin: 5px 0;}
 .logotipo h1 {background: url("img/logotipo.png") no-repeat;background-size: contain;text-indent: -99999px;width: 210px;height: 39px;margin: 0;}
 
