--- a/assets/sosoares/css/styles-extrusao.css
+++ b/assets/sosoares/css/styles-extrusao.css
@@ -10,8 +10,10 @@ nav .navbar-nav li:hover, .navbar-default .navbar-nav > .open > a, .navbar-defau
 .li-b {color: #000;}
 .grid-demo .row .row [class*="col-"] {border-left: 1px solid #797979;}
 
-.button, .form #searchButton, .button_slider {background-color: #909090;box-shadow: 0 3px 0 #585858;}
+.button, .button_slider {background-color: #909090;box-shadow: 0 3px 0 #585858;}
 .form #search, .input {border-color: #909090;}
+.form #searchButton, .form #search::-webkit-input-placeholder {color: #909090;}
+
 .title1, .title2, .title3, .title4 {color: #797979}
 .carousel-indicators li {background-color: #454545;}
 
