--- a/assets/sosoares/styles.css
+++ b/assets/sosoares/styles.css
@@ -79,8 +79,8 @@ footer {background-color:#f0f0f0;width:100%;height:90px;
 footer .container {padding-top:25px;height: 100%;position: relative;}
 footer .container .row {height: 34px;}
 footer .container .row > div {display: inline-block;vertical-align: top;}
-footer .container .row div h4, footer .container .row div p {margin: 0 5px;vertical-align: top;display: inline-block;height: 25px;}
-footer .container .row div h4 {padding-top: 5px;}
+footer .container .row div .h4, footer .container .row div .p {margin: 0 5px;vertical-align: top;display: inline-block;height: 25px;}
+footer .container .row div .h4 {padding-top: 5px;}
 
 footer .rights {width: 360px;}
 footer .telefone {width: 135px;}
@@ -106,8 +106,8 @@ footer b {font-weight: 700;}
 
 .center {width: 80%;margin: 0 auto 100px;padding: 15px 0;text-align: center;}
 #separador {display: none;}
-h3 {color: #fff;font-size: 17px;font-weight: normal;margin: 10px auto;width: 100%;}
-h4 {display: inline-block;color: #494949;font-size: 13px;font-weight: 900;margin: 0}
+.h3 {color: #fff;font-size: 17px;font-weight: normal;margin: 10px auto;width: 100%;}
+.h4 {display: inline-block;color: #494949;font-size: 13px;font-weight: 900;margin: 0}
 main {position: absolute;top: 35%!important;right: 0;left: 0;}
 .font {font-size: 60px;color: #fff;}
 
@@ -120,7 +120,7 @@ main {position: absolute;top: 35%!important;right: 0;left: 0;}
     main {top: 25%!important;}
     .center {width: 100%;padding: 15px 0;margin: 0 auto ;}
     .box {width: 147px;height: 150px;}
-    h3 {font-size: 14px;}
+    .h3 {font-size: 14px;}
     .font {font-size: 50px}
 
     footer {height: 120px;}
@@ -133,7 +133,7 @@ main {position: absolute;top: 35%!important;right: 0;left: 0;}
 @media screen and (max-width: 768px) {
     main {top: 20%!important;}
     .box {width: 165px;height: 160px;}
-    h3 {font-size: 17px;}
+    .h3 {font-size: 17px;}
     #separador {display: block;background-color: transparent;border: 0;}
     footer .container {margin: 0 10px;}
 }
@@ -174,7 +174,7 @@ main {position: absolute;top: 35%!important;right: 0;left: 0;}
 @media screen and (max-width: 768px) and (max-height: 600px) {
     main {top: 65px!important;}
     .box {width: 140px;height: 140px;padding: 22px 15px;}
-    h3 {font-size: 13px;}
+    .h3 {font-size: 13px;}
     footer {bottom: -30px}
 }
 
@@ -185,25 +185,25 @@ main {position: absolute;top: 35%!important;right: 0;left: 0;}
 @media screen and (max-width: 450px){
     header {min-height: 100px;}
     .box {width: 140px;height: 145px;}
-    h3 {font-size: 13px;}
+    .h3 {font-size: 13px;}
     .icon-sosoares {font-size: 20px!important;}
 }
 
 @media screen and (max-width: 390px){
     .box {width: 125px;height: 125px;padding: 22px 15px;}
-    h3 {font-size: 13px;}
+    .h3 {font-size: 13px;}
 }
 @media screen and (max-width: 350px){
     .box {width: 110px;height: 110px;}
-    h3 {font-weight: 300;}
+    .h3 {font-weight: 300;}
     .font {font-size: 35px}
     footer .icon-sosoares {font-size: 18px!important;}
-    footer h4 {font-size: 11px;padding-top: 2px;}
-    footer p {font-size: 12px}
+    footer .h4 {font-size: 11px;padding-top: 2px;}
+    footer .p {font-size: 12px}
 }
 
 @media screen and (max-width: 768px) and (max-height: 500px) {
     .box {width: 110px;height: 110px;}
-    h3 {font-weight: 300;}
+    .h3 {font-weight: 300;}
     .font {font-size: 35px}
 }
