--- a/assets/sosoares/css/bootstrap.css
+++ b/assets/sosoares/css/bootstrap.css
@@ -5147,13 +5147,14 @@ button.close {
 .modal-header {
   min-height: 16.42857143px;
   padding: 15px;
-  /*border-bottom: 1px solid #e5e5e5;*/
+  border-bottom: 1px solid #e5e5e5;
 }
 .modal-header .close {
   margin-top: -2px;
 }
 .modal-title {
   margin: 0;
+  padding-left: 5px;
   line-height: 1.42857143;
 }
 .modal-body {
