--- a/assets/sosoares/css/home.css
+++ b/assets/sosoares/css/home.css
@@ -1,55 +1,53 @@
-/*============================== FONTS =======================================*/
+/*============================== ../fonts =======================================*/
 @font-face {
     font-family: 'SourceSansPro';
-    src: url('fonts/SourceSansPro-ExtraLight.eot?');
-    src: url('fonts/SourceSansPro-ExtraLight.eot?#iefix') format('embedded-opentype'), url('fonts/SourceSansPro-ExtraLight.otf.woff?') format('woff'), url('fonts/SourceSansPro-ExtraLight.ttf.woff?') format('truetype'), url('fonts/SourceSansPro-ExtraLight.svg?') format('svg');
+    src: url('../fonts/SourceSansPro-ExtraLight.eot?');
+    src: url('../fonts/SourceSansPro-ExtraLight.eot?#iefix') format('embedded-opentype'), url('../fonts/SourceSansPro-ExtraLight.otf.woff?') format('woff'), url('../fonts/SourceSansPro-ExtraLight.ttf.woff?') format('truetype'), url('../fonts/SourceSansPro-ExtraLight.svg?') format('svg');
     font-style: normal;
     font-weight: 100;
 }
 
 @font-face {
     font-family: 'SourceSansPro';
-    src: url('fonts/SourceSansPro-Light.eot?');
-    src: url('fonts/SourceSansPro-Light.eot?#iefix') format('embedded-opentype'), url('fonts/SourceSansPro-Light.otf.woff?') format('woff'), url('fonts/SourceSansPro-Light.ttf.woff?') format('truetype'), url('fonts/SourceSansPro-Light.svg?') format('svg');
+    src: url('../fonts/SourceSansPro-Light.eot?');
+    src: url('../fonts/SourceSansPro-Light.eot?#iefix') format('embedded-opentype'), url('../fonts/SourceSansPro-Light.otf.woff?') format('woff'), url('../fonts/SourceSansPro-Light.ttf.woff?') format('truetype'), url('../fonts/SourceSansPro-Light.svg?') format('svg');
     font-style: normal;
     font-weight: 300;
 }
 
 @font-face {
     font-family: 'SourceSansPro';
-    src: url('fonts/SourceSansPro-Bold.eot?');
-    src: url('fonts/SourceSansPro-Bold.eot?#iefix') format('embedded-opentype'), url('fonts/SourceSansPro-Bold.otf.woff?') format('woff'), url('fonts/SourceSansPro-Bold.ttf.woff?') format('truetype'), url('fonts/SourceSansPro-Bold.svg?') format('svg');
+    src: url('../fonts/SourceSansPro-Bold.eot?');
+    src: url('../fonts/SourceSansPro-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/SourceSansPro-Bold.otf.woff?') format('woff'), url('../fonts/SourceSansPro-Bold.ttf.woff?') format('truetype'), url('../fonts/SourceSansPro-Bold.svg?') format('svg');
     font-style: normal;
     font-weight: 700;
 }
 
 @font-face {
     font-family: 'SourceSansPro';
-    src: url('fonts/SourceSansPro-Black.eot?');
-    src: url('fonts/SourceSansPro-Black.eot?#iefix') format('embedded-opentype'), url('fonts/SourceSansPro-Black.otf.woff?') format('woff'), url('fonts/SourceSansPro-Black.ttf.woff?') format('truetype'), url('fonts/SourceSansPro-Black.svg?') format('svg');
+    src: url('../fonts/SourceSansPro-Black.eot?');
+    src: url('../fonts/SourceSansPro-Black.eot?#iefix') format('embedded-opentype'), url('../fonts/SourceSansPro-Black.otf.woff?') format('woff'), url('../fonts/SourceSansPro-Black.ttf.woff?') format('truetype'), url('../fonts/SourceSansPro-Black.svg?') format('svg');
     font-style: normal;
     font-weight: 900;
 }
 
 @font-face {
     font-family: 'SourceSansPro';
-    src: url('fonts/SourceSansPro-Regular.eot?');
-    src: url('fonts/SourceSansPro-Regular.eot?#iefix') format('embedded-opentype'), url('fonts/SourceSansPro-Regular.otf.woff?') format('woff'), url('fonts/SourceSansPro-Regular.ttf.woff?') format('truetype'), url('fonts/SourceSansPro-Regular.svg?') format('svg');
+    src: url('../fonts/SourceSansPro-Regular.eot?');
+    src: url('../fonts/SourceSansPro-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/SourceSansPro-Regular.otf.woff?') format('woff'), url('../fonts/SourceSansPro-Regular.ttf.woff?') format('truetype'), url('../fonts/SourceSansPro-Regular.svg?') format('svg');
     font-style: normal;
     font-weight: normal;
 }
 
 /*============================== BODY =======================================*/
-*, div {
+/**, div {
     -webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
-}
+}*/
 html {
     height: 100%;
     min-height: 500px;
 }
 body {
-    background: url("img/Castoral.jpg") #e8e8e8 no-repeat fixed center;
-    background-size: cover;
     font-family: 'SourceSansPro', Arial, sans-serif!important;
     font-weight: 300;
     font-size: 14px;
@@ -67,9 +65,14 @@ header .row {position: relative;}
     -webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
 }
 #bd img {margin: 0 0 0 15px}
+#bd a {width: 22px; height: 15px;}
 
 .logotipo {max-width: 210px;max-height: 47px;overflow: hidden;margin: 5px 0;}
-.logotipo h1 {background: url("img/logotipo.png") no-repeat;background-size: contain;text-indent: -99999px;width: 210px;height: 39px;margin: 0;}
+.logotipo h1 {background: url("../img/logotipo.png") no-repeat;background-size: contain;text-indent: -99999px;width: 210px;height: 39px;margin: 0;}
+
+.lingua {padding-right: 5px;}
+.ultima_lingua {width: 22px; height: 15px;}
+.inactive {filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */ filter: gray; /* IE6-9 */ -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */}
 
 /*============================== FOOTER =======================================*/
 footer {background-color:#f0f0f0;width:100%;height:90px;
@@ -87,9 +90,15 @@ footer .telefone {width: 135px;}
 footer .email {width: 150px;}
 footer .areaReservada, footer .imgSistemas {position: absolute;top: 20px;right: 10px;}
 footer .imgSistemas {right: 140px;top: 15px;}
+footer .imgSistemas img {width:165px; height:43px;}
 
 footer b {font-weight: 700;}
 .button {background-color:#107ca4;box-shadow: 0 3px 0 #05698e;color:#fff;border:0;font-size:14px;}
+.icon-sososares {font-size: 25px;}
+
+/*============================== FOOTER =======================================*/
+.login {padding: 0 20px 20px 20px !important;}
+.login input {padding: 0 0 0 10px !important; border: 1px solid #107ca4;}
 
 /*============================== CAIXAS =======================================*/
 .box {width: 170px;height: 170px;display: inline-block;border-radius: 100%;margin: 15px;text-align: center;padding: 30px 15px;
@@ -124,10 +133,11 @@ main {position: absolute;top: 35%!important;right: 0;left: 0;}
     .font {font-size: 50px}
 
     footer {height: 120px;}
-    footer .rights, footer .telefone, footer .email {display: block;width: 400px;}
+    footer .rights, footer .telefone, footer .email {display: block!important;width: 350px;text-align: center;padding-left: 15px;}
     footer .telefone, footer .email {padding-left: 7%;}
     footer .areaReservada {top: 70px;right: 35px;}
     footer .imgSistemas {top: 15px;right: 10px;}
+    .row {margin: 0;}
 
 }
 @media screen and (max-width: 768px) {
@@ -136,6 +146,7 @@ main {position: absolute;top: 35%!important;right: 0;left: 0;}
     .h3 {font-size: 17px;}
     #separador {display: block;background-color: transparent;border: 0;}
     footer .container {margin: 0 10px;}
+    .row {margin: 0;}
 }
 
 @media screen and (max-height: 700px) {
