--- a/assets/sosoares/css/home.css
+++ b/assets/sosoares/css/home.css
@@ -40,9 +40,6 @@
 }
 
 /*============================== BODY =======================================*/
-/**, div {
-    -webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
-}*/
 html {
     height: 100%;
     min-height: 500px;
@@ -75,7 +72,8 @@ header .row {position: relative;}
 .inactive {filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */ filter: gray; /* IE6-9 */ -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */}
 
 /*============================== FOOTER =======================================*/
-footer {background-color:#f0f0f0;width:100%;height:90px;
+footer {
+    background-color:#f0f0f0;width:100%;height:90px;
     -webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
     position: absolute;bottom: 0;
 }
@@ -125,6 +123,7 @@ main {position: absolute;top: 35%!important;right: 0;left: 0;}
     .center {width: 90%;text-align: center;}
     main {top: 30%!important;}
 }
+
 @media screen and (max-width: 991px) {
     main {top: 25%!important;}
     .center {width: 100%;padding: 15px 0;margin: 0 auto ;}
@@ -140,6 +139,7 @@ main {position: absolute;top: 35%!important;right: 0;left: 0;}
     .row {margin: 0;}
 
 }
+
 @media screen and (max-width: 768px) {
     main {top: 20%!important;}
     .box {width: 165px;height: 160px;}
@@ -149,8 +149,29 @@ main {position: absolute;top: 35%!important;right: 0;left: 0;}
     .row {margin: 0;}
 }
 
+@media screen and (max-width: 768px) and (max-height: 700px) {
+    main {top: 13%!important;}
+}
+
 @media screen and (max-height: 700px) {
     main {top: 25%!important;}
+}
+
+@media screen and (max-width: 768px) and (max-height: 600px) {
+    main {top: 65px!important;}
+    .box {width: 140px;height: 140px;padding: 22px 15px;}
+    .h3 {font-size: 13px;}
+    footer {bottom: -30px}
+}
+
+@media screen and (max-width: 768px) and (max-height: 500px) {
+    .box {width: 110px;height: 110px;}
+    .h3 {font-weight: 300;}
+    .font {font-size: 35px}
+}
+
+@media screen and (max-width: 768px) and (max-height: 550px) {
+    .box {width: 125px;height: 125px;}
 }
 
 @media screen and (max-height: 650px) {
@@ -177,21 +198,6 @@ main {position: absolute;top: 35%!important;right: 0;left: 0;}
     main {top: 65px!important;}
 }
 
-@media screen and (max-width: 768px) and (max-height: 700px) {
-    main {top: 13%!important;}
-}
-
-@media screen and (max-width: 768px) and (max-height: 600px) {
-    main {top: 65px!important;}
-    .box {width: 140px;height: 140px;padding: 22px 15px;}
-    .h3 {font-size: 13px;}
-    footer {bottom: -30px}
-}
-
-@media screen and (max-width: 768px) and (max-height: 550px) {
-    .box {width: 125px;height: 125px;}
-}
-
 @media screen and (max-width: 450px){
     header {min-height: 100px;}
     .box {width: 140px;height: 145px;}
@@ -209,6 +215,7 @@ main {position: absolute;top: 35%!important;right: 0;left: 0;}
     .box {width: 125px;height: 125px;padding: 22px 15px;}
     .h3 {font-size: 13px;}
 }
+
 @media screen and (max-width: 350px){
     .box {width: 110px;height: 110px;}
     .h3 {font-weight: 300;}
@@ -218,8 +225,3 @@ main {position: absolute;top: 35%!important;right: 0;left: 0;}
     footer .p {font-size: 12px}
 }
 
-@media screen and (max-width: 768px) and (max-height: 500px) {
-    .box {width: 110px;height: 110px;}
-    .h3 {font-weight: 300;}
-    .font {font-size: 35px}
-}
