--- a/assets/sosoares/css/inicio.css
+++ b/assets/sosoares/css/inicio.css
@@ -1,1 +1,34 @@
 .destaque {padding-left: 30px;}
+.data-noticia {width: 27.6%;}
+.noticia {margin: 0 0 30px;padding-left: 0;}
+.noticia img {width:200px; height: 133px; border-radius: 10px;}
+.noticia h3 {color: #107ca4;font-size: 26px;margin: 0 0 2px;}
+.noticia .date {font-size: 11px;color: #717171;}
+.noticia .news-text {padding-left: 25px;line-height: 25px;text-indent: 20px;}
+
+/*============================== MEDIA QUERIES ===================================*/
+@media (max-width: 1240px) {
+	.col-md-4 .title1 {margin: 20px 0 10px;}
+}
+
+@media screen and (max-width: 1220px) {
+	.title1 {margin: 20px 0 10px;}
+}
+
+@media screen and (max-width: 1217px) {
+	.title1 {margin: 20px 10px 10px;}
+	.data-noticia {width: 29.8%;}
+	.noticia {padding-left: 10px;}
+}
+
+@media screen and (max-width: 1184px) {
+	.data-noticia {margin-left: -5px;}
+}
+
+@media screen and (max-width: 992px) {
+	.noticia {margin: 0;}
+}
+
+@media screen and (max-width: 580px) {
+	.col-md-4 .title1 {margin: 0 10px 10px;}
+}
