--- a/assets/sosoares/css/produtos.css
+++ b/assets/sosoares/css/produtos.css
@@ -17,23 +17,84 @@
 .downloads ul li ul li span {padding-right: 5px;}
 .obras {padding-left: 32px!important;}
 .obras-titulo {margin-bottom: 30px}
-.obras-indicadores {margin-bottom: -60px}
+.obras-indicadores {margin-bottom: -58px}
 .obras-img {width:150px; height: 150px;}
 
 /*============================== MEDIA QUERIES ===================================*/
-@media (max-width: 1250px) {
+@media screen and (max-width: 1250px) {
 	.info {width: 98.2%;}
 }
 
-@media (max-width: 1010px) {
+@media screen and (max-width: 1055px) {
+	.downloads-titulo {margin: 0 0 0 30px;}
+}
+
+@media screen and (max-width: 1015px) {
+	.downloads-titulo {margin: 0 0 0 20px;}
+}
+
+@media screen and (max-width:  1010px) {
 	.col-md-5 {width: 60%;}
-	.col-md-3 {width: 100%;}
+	.row > .col-md-3 {width: 100%;}
 	.resultados {float: right;width: calc(100% - 41%);}
 }
 
-@media (max-width: 992px) {
+@media screen and (max-width: 992px) {
+	/*função tabs.js NÃO APAGAR!!!*/
+	.carousel-inner {width: calc(100% - 5%);}
 }
 
-@media (max-width: 808px) {
+@media screen and (max-width:  975px) {
+	.downloads-titulo {margin: 0 0 0 10px;}
+}
+
+@media screen and (max-width:  935px) {
+	.downloads-titulo:nth-child(1n+0) {margin: 0 0 0 40px;}
+	.downloads-titulo:nth-child(1), .downloads-titulo:nth-child(5) {margin: 0 0 0 0;}
+}
+
+@media screen and (max-width:  850px) {
+	.related {height: 600px;}
+	.related .carousel-inner .item .row .col-sm-2 {width: 30%;margin-bottom: 50px;}
+}
+
+@media screen and (max-width:  808px) {
 	.info {width: 97.2%;}
+	.downloads-titulo:nth-child(1n+0) {margin: 0 0 0 40px;}
+	.cortes ul {display: table-caption;}
+}
+
+@media screen and (max-width:  625px) {
+	.downloads-titulo:nth-child(2) {margin: 0 0 0 155px;}
+	.downloads-titulo:nth-child(4) {margin: 0 0 0 60px;}
+}
+
+@media screen and (max-width:  580px) {
+	.descricao, .resultados {padding-left: 15px;}
+	.resultados {float: none;width: none;}
+	.col-md-5, .col-md-4, .col-md-3 {width: auto!important;}
+	.downloads-titulo:nth-child(odd) {margin: 0 0 0 0;}
+}
+
+@media screen and (max-width:  540px) {
+	.content-2 ul {display: table-caption;}
+	.content-2 ul li ul {display: -webkit-box;}
+	.downloads-titulo:nth-child(1n+0) {margin: 0;}
+}
+
+@media screen and (max-width:  520px) {
+	.info {width: 96.2%;}
+}
+
+@media screen and (max-width:  490px) {
+	.content-2 ul li ul {display: block;}
+	.content-2 ul li ul li {padding-bottom: 5px;}
+}
+
+@media screen and (max-width:  385px) {
+	.info {width: 95.2%;}
+}
+
+@media screen and (max-width:  340px) {
+	.info {width: 93.2%;}
 }
